header alignment fix

--- a/vue/src/widgetLib/components/_components.scss
+++ b/vue/src/widgetLib/components/_components.scss
@@ -3,6 +3,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding: 0 1em 0 1em;
   min-width: 205px;
   max-width: 450px;
 }
